refactore ApiException
