# src/main/resources/schema/swagger/example-api-swagger-spec.yml
@@ -31,7 +31,7 @@ paths:
           $ref: '#/responses/response-unauthorized'
         '500':
           $ref: '#/responses/response-internal-server-error-500'
-  '/v1/purchases/{customer-id}':
+  '/v1/purchases/{phone-number}':
       get:
         operationId: getAllTransactions
         summary: Get All transactions for a customer
@@ -76,7 +76,7 @@ paths:
 parameters:
   customer-id-in-path:
     in: path
-    name: customer-id
+    name: phone-number
     type: string
     required: true
 definitions:
